fix: images on blog posts overflowing and add gap between graph and content

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -42,3 +42,8 @@ body {
 a {
   color: var(--link-color);
 }
+
+img {
+  max-width: 100%;
+  height: auto;
+}
